[gd_scene load_steps=3 format=3 uid="uid://cl02bfakrlfcu"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_b2srl"]
[ext_resource type="FontFile" uid="uid://cym4u7uub8le0" path="res://sprites/font/tinypixel/tinypixel.otf" id="2_168ax"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_b2srl")

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 100.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.972549, 0.211765, 0.176471, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_168ax")
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -110.0
offset_right = 240.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.972549, 0.211765, 0.176471, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_168ax")
theme_override_font_sizes/font_size = 48
text = "Essie Saves Christmas"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Start" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.5
offset_top = -240.0
offset_right = 104.5
offset_bottom = -158.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_168ax")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Time" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_bottom = 74.0
grow_horizontal = 0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.972549, 0.211765, 0.176471, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_168ax")
theme_override_font_sizes/font_size = 48
text = "30
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLimit" type="Timer" parent="."]
wait_time = 3.0

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="timeout" from="TimeLimit" to="." method="_on_time_limit_timeout"]
